@@ -31,7 +31,10 @@ import static org.hibernate.cfg.Environment.GENERATE_STATISTICS;
  * @understands how to run a local development mode webserver so we can develop live
  * Set the following before running the main method:
  * Working directory: <project-path>/server
- * VM arguments: -Xms512m -Xmx1024m -Djava.awt.headless=true
+ * VM arguments:
+ *      -Xms512m -Xmx1024m -Djava.awt.headless=true
+ * If running on java >=9, add the following VM args
+ *      --add-modules=java.se,java.xml.bind,java.xml.ws.annotation
  * classpath: Use classpath of 'development-server'
  */
 
@@ -102,7 +105,7 @@ public class DevelopmentServer {
 
     private static void copyPluginAssets() throws IOException {
         File classPathRoot = new File(DevelopmentServer.class.getProtectionDomain().getCodeSource().getLocation().getPath());
-        FileUtils.copyFile(new File("webapp/WEB-INF/rails.new/webpack/rails-shared/plugin-endpoint.js"), new File(classPathRoot, "plugin-endpoint.js"));
+        FileUtils.copyFile(new File("webapp/WEB-INF/rails/webpack/rails-shared/plugin-endpoint.js"), new File(classPathRoot, "plugin-endpoint.js"));
     }
 
     private static void assertActivationJarPresent() {
